Черновой вариант верстки первого экрана без адаптива. Небольшая правка)

--- a/src/styles/index/_section-1.scss
+++ b/src/styles/index/_section-1.scss
@@ -45,7 +45,7 @@
     button {
       padding: 18px 36px;
       font: 24px Roboto, sans-serif;
-      font-weight: normal;;
+      font-weight: normal;
       color: white;
       background: none;
       border: 1px solid white;
