--- a/src/styles/index/_section-1.scss
+++ b/src/styles/index/_section-1.scss
@@ -1,17 +1,13 @@
 #index__section-1 {
   position: relative;
   width: 100%;
-  height: 905px;
+  height: 1082px;
   padding: 0 130px 0 150px;
-  background: url("../img/image 14.jpg") center top no-repeat;
+  background: url("../../img/image 14.jpg") center top no-repeat;
   background-size: cover;
 
   &:after {
-    @include pseudo(1,0,0,-355px,0);
-    width: 0;
-    height: 0;
-    border-top: 1260px solid rgba(0, 65, 140, 0.7);
-    border-right: 1440px solid transparent;
+
   }
 
   .section-1__content {
