--- a/src/styles/general.scss
+++ b/src/styles/general.scss
@@ -61,5 +61,6 @@ html.fixed {
 @import "index/section-1";
 @import "index/section-2";
 @import "index/section-3";
+@import "index/section-4";
 
 //Контакты
