--- a/src/styles/index/_section-1.scss
+++ b/src/styles/index/_section-1.scss
@@ -3,16 +3,20 @@
   width: 100%;
   max-width: 1920px;
   height: 1437px;
-  padding: 0 130px 0 150px;
-  background: url("../../img/section-1_bg_triangle.svg") left top no-repeat, url("../../img/image 14.jpg") center top no-repeat;
-  background-size: contain, auto 75%;
 
-  /*  &:after {
-      @include pseudo(1, 0, 0, -25%, auto);
-      width: 80%;
-      background: url("../../img/section-1_bg_triangle.svg") left top no-repeat;
-      background-size: contain;
-    }*/
+  &:after {
+    @include pseudo(1, 0, 0, 0, 0);
+    width: 100%;
+    background: url("../../img/section-1_bg_triangle.svg") left top no-repeat;
+    background-size: contain;
+  }
+
+  .container {
+    position: relative;
+    padding: 0 130px 363px 150px;
+    background: url("../../img/image 14.jpg") center top no-repeat;
+    background-size: cover;
+  }
 
   .section-1__content {
     position: relative;
