Все еще черновой вариант главной страницы на 1920 с фонами. Небольшие правки.

--- a/src/styles/index/_section-3.scss
+++ b/src/styles/index/_section-3.scss
@@ -1,6 +1,7 @@
-#wrapper {
-  background: url("../../img/section-3-4_bg-img.png") left bottom 184px no-repeat;
-  background-size: contain;
+#index__section-3-4_wrap {
+  background: url("../../img/section-3-4_bg-img.png") left top no-repeat;
+  background-size: cover;
+  padding-bottom: 300px;
 }
 
 #index__section-3 {
