--- a/src/styles/index/_section-1.scss
+++ b/src/styles/index/_section-1.scss
@@ -14,7 +14,7 @@
   .container {
     position: relative;
     padding: 0 130px 363px 150px;
-    background: url("../../img/image 14.jpg") center top no-repeat;
+    background: url("../../img/image 14.png") center top no-repeat;
     background-size: cover;
   }
 
